# DVA_QT

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt  dva.cpp  dva.h  dva.ui  excitation.cpp  excitation.h  excitation.ui  functions.h  help.cpp  help.ui  holcir.cpp  holcir.h  holcir.ui  ise.cpp  ise.h  ise.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  primary.cpp  primary.h  primary.ui  qcustomplot.h  rec.cpp  rec.h  rec.ui  secondary.cpp  secondary.h  secondary.ui  solcir.cpp  solcir.h  solcir.ui  sqr.cpp  sqr.h  sqr.ui
